# feature_interpretability

./: .gitignore  CITATION.cff  README.md  pyproject.toml
docs/doctrees/: environment.pickle  index.doctree
docs/doctrees/derivatives/: pytnestedcyl.doctree  tfcoupon.doctree
docs/doctrees/dev/: docs.doctree  enviroments.doctree  test_scripts.doctree  testing.doctree
docs/doctrees/exp/: pytnestedcyl.doctree  tfcoupon.doctree
docs/doctrees/fns/: coupondata.doctree  nestedcylinderdata.doctree  pytorchcustom.doctree
docs/doctrees/scripts/: feature_field_corr.doctree  feature_fieldstd_corr.doctree  feature_over_fields.doctree  feature_pred_corr.doctree  feature_sensitivity.doctree  field_autocorr.doctree  field_sensitivity.doctree  (+1 more)
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: conf.py  index.rst
examples/pyt_nestedcyl/: nestedcyl_design_file.csv  trained_hrMOICyl2sclPTW_model.pth  trained_rho2PTW_model.pth
examples/tf_coupon/: coupon_design_file.csv  coupon_normalization.npz  trained_pRad2TePla_model.h5  trained_rho2TePla_model.h5
scripts/: feature_field_corr.py  feature_fieldstd_corr.py  feature_over_field.py  feature_pred_corr.py  feature_sensitivity.py  field_autocorr.py  field_sensitivity.py  ftderivatives_pyt_nestedcyl.py  ftderivatives_tf_coupon.py  plot_features.py  test_scripts.py
src/fns/: README_fns.md  __init__.py  clear_test_cache.py  mat.py  misc.py  plot.py  save.py
temp_figures/: README.md
tests/: test_mat.py  test_misc.py  test_plots.py  test_save.py
(+76 files in other folders)
