[tool.poetry]
name = "feature_interpretability"
version = "0.1.0"
license = "BSD-3-Clause"
description = "Tools for neural network interpretability by examining internal model states (features) in both Python TensorFlow and PyTorch"
authors = ["Skylar Callis <sjcallis@lanl.gov>"]
readme = "README.md"
repository = "https://github.com/lanl/feature_interpretability"
documentation = "https://lanl.github.io/feature_interpretability/html/index.html"
packages = [
	{include = "scripts"},
	{include = "fns", from = "src"},
	]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["src"]
